--- a/packages/ui/.storybook/preview-head.html
+++ b/packages/ui/.storybook/preview-head.html
@@ -1,6 +1,3 @@
 <!-- .storybook/preview-head.html -->
 
-<link
-  href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
-  rel="stylesheet"
-/>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
