--- a/packages/ui/.storybook/manager-head.html
+++ b/packages/ui/.storybook/manager-head.html
@@ -1,7 +1,9 @@
+<link rel="shortcut icon" href="/favicon.ico">
 <style>
     html,
     body {
         font-family: "Open Sans", sans-serif;
+        background-color: #333 !important;
     }
 
     .sidebar-container {
@@ -27,6 +29,12 @@
         margin-left: 15px;
         margin-right: 9px;
         border-width: 6px 0 6px 7px;
+    }
+
+    button.sidebar-item[data-parent-id="false"] {
+        text-transform: uppercase;
+        font-weight: 600;
+        margin: 8px 0;
     }
 
     .sidebar-item svg {
