--- a/packages/ui/.storybook/preview-head.html
+++ b/packages/ui/.storybook/preview-head.html
@@ -1,51 +1,2 @@
-<style type="text/css">
-/* roboto-400 */
-@font-face {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 400;
-  src: url('./fonts/roboto-v27-latin-regular.woff2') format('woff2'), url('./fonts/roboto-v27-latin-regular.woff') format('woff'),
-    url('./fonts/roboto-v27-latin-regular.ttf') format('truetype'), url('./fonts/roboto-v27-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-
-/* roboto-500 */
-@font-face {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  src: url('./fonts/roboto-v27-latin-500.woff2') format('woff2'), url('./fonts/roboto-v27-latin-500.woff') format('woff'),
-    url('./fonts/roboto-v27-latin-500.ttf') format('truetype'), url('./fonts/roboto-v27-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-
-/* open sans-400 */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./fonts/OpenSans-Regular.woff2') format('woff2');
-}
-
-/* open sans-400 */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: url('./fonts/OpenSans-Italic.woff2') format('woff2');
-}
-
-/* open sans-600 */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  src: url('./fonts/OpenSans-SemiBold.woff2') format('woff2');
-}
-
-/* open sans-600 */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 600;
-  src: url('./fonts/OpenSans-SemiBoldItalic.woff2') format('woff2');
-}
-</style>
+<link rel='stylesheet' type="text/css" href='./typography/open-sans.css'>
+<link rel='stylesheet' type="text/css" href='./typography/pp-telegraf.css'>
