--- a/packages/ui/.storybook/preview-head.html
+++ b/packages/ui/.storybook/preview-head.html
@@ -1,2 +1,3 @@
 <link rel='stylesheet' type="text/css" href='./typography/open-sans.css'>
 <link rel='stylesheet' type="text/css" href='./typography/pp-telegraf.css'>
+<link rel='stylesheet' type="text/css" href='./typography/ubuntu-mono.css'>
